ajout convert mp4

--- a/accelerate.ipynb
+++ b/accelerate.ipynb
@@ -2,25 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
     "\n",
     "\n",
     "# Chemin vers le répertoire contenant les vidéos\n",
-    "chemin_repertoire = \"G:\\\\DCIM\\\\101GOPRO\"\n",
+    "chemin_repertoire = \"/home/nico/pCloudDrive/Videos/2024/amaryllis\"\n",
     "os.chdir(chemin_repertoire)\n",
     "listdir = os.listdir(chemin_repertoire)\n",
-    "#list_mp4 = sorted([f for f in listdir if f.endswith(\".MP4\")], key=os.path.getmtime)\n",
-    "list_mp4 = sorted([f for f in listdir if f.endswith(\".MP4\")])\n",
+    "list_mp4 = sorted([f for f in listdir if f.endswith(\".mp4\")], key=os.path.getmtime)\n",
+    "#list_mp4 = sorted([f for f in listdir if f.endswith(\".MP4\")])\n",
     "output = cv2.VideoWriter_fourcc(*'mp4v')\n",
-    "out = cv2.VideoWriter(\"C:\\\\Users\\\\nicol\\\\Videos\\\\Captures\\\\output.mp4\", output, 29, (1920, 1080))\n",
+    "out = cv2.VideoWriter(\"/home/nico/DataspellProjects/traitement_video/output.mp4\", output, 29, (1920, 1080))\n",
     "\n",
     "for nom_fichier in list_mp4:\n",
     "    print(nom_fichier)\n",
@@ -32,11 +30,13 @@
     "        ret, frame = cap.read()\n",
     "        if ret:\n",
     "            out.write(frame)\n",
-    "            current_frame += 25 * 60\n",
+    "            current_frame += 2\n",
     "    cap.release()\n",
     "out.release()\n",
     "cv2.destroyAllWindows()\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
